Commit de atualização: Melhora no suporte de imagens na Ocorrência.